--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 01-01-05: Packet exchange access violation on character moving. [AlexKreuz]
- 01-01-05: Undefined map blocks on packet sends to players caused crash. [AlexKreuz]
- 01-01-05: Other characters disconnecting while moving caused missend of packet. [AlexKreuz]
- 01-01-05: Added NPC areaset. [Tsusai]
- 12-31-04: Added Packet tracing output switch to weiss.ini. [AlexKreuz]
- 12-31-04: Pets did not load on server restart. [AlexKreuz]
- 12-31-04: Bug #25: Deleting character did not remove chara gamedata. [AlexKreuz]
- 12-31-04: PVP Steal could not access target's inventory caused crash. [AlexKreuz]
- 12-31-04: Memory leak in Thief/Assassin stealing skill. [AlexKreuz]
- 12-31-04: Read-only gm_commands.ini file caused crash. Added dialog. [AlexKreuz]
- 12-30-04: Fixed GM athena commands "h" and "help". [Tsusai]
- 12-30-04: JCon Character Zeny control now ranged [0-2147483647]. [AlexKreuz]
- 12-30-04: Uncapped #ccolor. [Tsusai]
- 12-29-04: Character disconnect map access issues. Using different map assign line. [AlexKreuz]
- 12-29-04: Optimized REED Loading one final time. Fuck REED! Wasted my Life on it! [AlexKreuz]
- 12-29-04: Cleared up some variables in create_account. [Tsusai]
- 12-29-04: Added script message variable $joblevel (like $charaname). [Tsusai]
- 12-28-04: Undid boot performance changes. Allowed same character name. [AlexKreuz]
- 12-25-04: GuildID retrieval w/o guilds caused crash. [AlexKreuz]
- 12-25-04: Bug #2: Improper loading of guild ids caused guilds to be out of sync. [AlexKreuz]
- 12-25-04: Guild member outside of party caused Pre-Link crash. [AlexKreuz]
- 12-25-04: Fixed broadcast handling using the broadcast procedure & scripts. [Tsusai]
- 12-22-04: Accesslevel field did not clear on JCon Accounts page. [AlexKreuz]